# ELEC390

./: Overview.canvas  README.md
Design/: ELEC390 Project Work Breakdown.canvas  Overview.canvas
Design/Headlight Board/: carlights-B_Cu.gbr  carlights-B_Mask.gbr  carlights-B_Paste.gbr  carlights-Edge_Cuts.gbr  carlights-F_Cu.gbr  carlights-F_Mask.gbr  carlights-F_Paste.gbr  carlights-job.gbrjob  carlights.drl  carlights.kicad_pcb  carlights.kicad_prl  carlights.kicad_pro  carlights.kicad_sch  fp-info-cache
Design/mapping/: ELEC390 Active Trip Planning System.canvas  ELEC390 Routing System Initialization Data Pipeline.canvas  README.md  extract_map.py  floyd_warshall_router.py  map_csv_notes.txt  map_edges_from_sharepoint_nodes.csv  map_from_csv.py  map_nodes_from_sharepoint.csv  map_router.py  map_types.py  rectangular_region.py  trip_planning_model.py  visualize_map.py
Documentation/: Jetson.md  Pi Hat.md  RaspberryPi.md
picode/: 2.keyboard_control.py  i2c.py  keyboardCtrl.py  pwm_test.c  wifi.sh
picode/picar-x/example/: 1.move.py  2.keyboard_control.py
picode/picar_driver/: CMakeLists.txt  Makefile
picode/picar_driver/.cache/clangd/index/: main.cpp.6478DF16EABE2384.idx  pix_driver.cpp.77F7332114AB8342.idx  pix_driver.hpp.953BADA140432609.idx
picode/picar_driver/include/: pix_driver.hpp
picode/picar_driver/src/: main.cpp  pix_driver.cpp
picode/robot-hat/: libttspico-utils_1.0+git20130326-11_armhf.deb.1  libttspico0_1.0+git20130326-11_armhf.deb
picode/robot-hat/robot_hat.egg-info/: PKG-INFO  SOURCES.txt
ros2_ws/: .gitignore  Makefile  build.sh  launchCamera.sh
ros2_ws/.cache/clangd/index/: node.cpp.38005BA1BB79347B.idx  (+2 more)
ros2_ws/launch/: controller_launch.py  cvtest_launch.py  jetson_launch.py  pi_launch.py
ros2_ws/src/driver/: CMakeLists.txt  package.xml
ros2_ws/src/joystick_controller/: CMakeLists.txt  package.xml
ros2_ws/src/motor_control/: CMakeLists.txt  package.xml
ros2_ws/src/motor_control/src/: main.cpp
ros2_ws/src/pix_driver/: CMakeLists.txt  package.xml
ros2_ws/src/roadline_tracker/: CMakeLists.txt  package.xml
ros2_ws/src/vision/: CMakeLists.txt  package.xml
(+20 files in other folders)
